--- a/.env
+++ b/.env
@@ -1,15 +1,16 @@
-MONGODB_TOKEN="" 
-DISCORD_TOKEN="" 
+MONGODB_TOKEN="" //mongodb url
+DISCORD_TOKEN="" //discord bot token
 
-ROLE_ADMIN="" 
-ROLE_BUYYER="" 
+ROLE_ADMIN="" //admin role
 
-BANNER="" 
+BANNER=""
 
-EMOJI_WL="" 
-EMOJI_NON_STOCK="" 
-EMOJI_STOCK="" 
-EMOJI_ARROW_STOCK="" 
+EMOJI_WL=""
+EMOJI_ONLINE=""
+EMOJI_OFFLINE=""
+EMOJI_NON_STOCK=""
+EMOJI_STOCK=""
+EMOJI_ARROW_STOCK=""
 
-CHANNEL_ID_TOPUP="" 
-CHANNEL_ID_HISTORY="" 
+CHANNEL_ID_DONATION_BOX="" //donation box channel id
+CHANNEL_ID_HISTORY="" //history purchase channel id
