--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGODB_TOKEN="" //mongodb url
-DISCORD_TOKEN="" //discord bot token
+MONGODB_TOKEN=""
+DISCORD_TOKEN=""
 
-ROLE_ADMIN="" //admin role
+ROLE_ADMIN=""
 
 BANNER=""
 
@@ -12,5 +12,5 @@ EMOJI_NON_STOCK=""
 EMOJI_STOCK=""
 EMOJI_ARROW_STOCK=""
 
-CHANNEL_ID_DONATION_BOX="" //donation box channel id
-CHANNEL_ID_HISTORY="" //history purchase channel id
+CHANNEL_ID_DONATION_BOX=""
+CHANNEL_ID_HISTORY=""
